@@ -1,0 +1,26 @@
+pub mod message;
+
+use accord::{Invalid, ValidatorResult};
+use accord::validators::max as original_max;
+
+fn required() -> Box<Fn(&Option<String>) -> ValidatorResult> {
+    Box::new(move |s: &Option<String>| {
+        if s.is_some() {
+            return Ok(());
+        }
+        Err(Invalid {
+            msg: "Must exist".to_string(),
+            args: vec![],
+            human_readable: "Must exist".to_string(),
+        })
+    })
+}
+
+fn max_if_present(max: usize) -> Box<Fn(&Option<String>) -> ValidatorResult> {
+    Box::new(move |s: &Option<String>| {
+        match &s {
+            Some(v) => original_max(max)(&v),
+            None => Ok(()),
+        }
+    })
+}
